fix: Arreglar gitignore y restaurar debug-ajax.php
- Fix: Actualizar .gitignore para excluir solo archivos debug temporales
- Add: Recrear debug-ajax.php con DevToolsAjaxDebugger singleton
- Feature: Sistema completo de depuración AJAX para Arquitectura 3.0
- Debug: Logging centralizado, captura de errores y análisis de rendimiento

--- a/.gitignore
+++ b/.gitignore
@@ -87,10 +87,12 @@ logs/
 debug.log
 error.log
 
-# Archivos de debug
+# Archivos de debug temporales (NO incluir debug-ajax.php del core)
 debug/
 .debug/
-debug-*.php
+debug-temp-*.php
+debug-local-*.php
+wp-debug-temp.php
 
 # ==========================================
 # ARCHIVOS TEMPORALES
