Refactor testing setup and configuration for Dev-Tools
- Removed obsolete test-config.php file.
- Enhanced bootstrap.php for WordPress PHPUnit Tests, including improved error reporting, dynamic test suite discovery, and automatic installation of WordPress Test Suite if not found.
- Updated class-dev-tools-test-case.php to include better setup and teardown methods, user management, and data cleanup.
- Deleted outdated phpunit.xml and replaced it with a new phpunit.xml.dist file with updated configurations and test suites.
- Introduced class-dev-tools-ajax-test-case.php for AJAX-specific testing, including helper methods for AJAX requests and assertions.
- Created a comprehensive wp-tests-config.php for WordPress Test Suite configuration, ensuring compatibility with Local by WP Engine and improved debugging options.

--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,14 @@ tests/output/
 test-results/
 *.phpunit.result.cache
 
-# WordPress testing específico
+# WordPress testing específico - archivos temporales
 /tmp/
 wordpress/
 wordpress-tests-lib/
-wp-tests-config.php
 /tmp-wordpress/
 /wp-tests/
+
+# Nota: wp-tests-config.php se mantiene en el repositorio como parte de la configuración
 
 # Scripts de instalación que pueden generar archivos temporales
 install-wp-tests-tmp/
