feat: Actualizar .gitignore y mejorar la configuración de PHPUnit para pruebas de WordPress

--- a/.gitignore
+++ b/.gitignore
@@ -21,26 +21,31 @@ build/
 # Si quieres ignorar dist/ completamente, descomenta la siguiente línea:
 # dist/
 
-# Testing y PHPUnit
-phpunit.xml
-phpunit.result.cache
+# Testing y PHPUnit - Solo ignorar archivos que se regeneran automáticamente
+# Mantener todos los archivos de configuración PHPUnit en el repositorio
+# Solo ignorar archivos temporales de configuración local personalizados
+phpunit-local.xml
+phpunit-dev.xml
+phpunit-custom.xml
+# Mantener .phpunit.result.cache en el directorio raíz para mejorar performance
+# pero ignorar en subdirectorios
+tests/**/.phpunit.result.cache
+modules/**/.phpunit.result.cache
 tests/coverage/
 tests/tmp/
 tests/output/
 test-results/
-*.phpunit.result.cache
 
-# WordPress testing específico - archivos temporales
-/tmp/
-wordpress/
-wordpress-tests-lib/
-/tmp-wordpress/
-/wp-tests/
+# WordPress testing específico - Solo archivos temporales, NO directorios de sistema
+# Permitir wordpress/ y wordpress-tests-lib/ para el test suite
+/tmp-install/
+/install-tmp/
+# Ignorar solo archivos temporales de instalación
+install-wp-tests-tmp/
+wp-tests-temp/
 
 # Nota: wp-tests-config.php se mantiene en el repositorio como parte de la configuración
-
-# Scripts de instalación que pueden generar archivos temporales
-install-wp-tests-tmp/
+# Nota: Permitimos wordpress/ y wordpress-tests-lib/ para WordPress Test Suite
 
 # Webpack y herramientas de build
 .cache/
@@ -74,12 +79,17 @@ Thumbs.db
 *.swp
 *.swo
 
-# Archivos temporales
+# Archivos temporales - Ser más específico para no interferir con tests
 *.tmp
 *.bak
 *.old
-temp/
-tmp/
+# Permitir temp/ que WordPress tests pueden necesitar
+temp/build/
+temp/cache/
+# NO ignorar temp/ completamente
+tmp/build/
+tmp/cache/
+# NO ignorar tmp/ completamente
 
 # Archivos sensibles y configuración local
 .env*
@@ -94,10 +104,12 @@ playground/
 demo/
 test-output/
 
-# Archivos específicos de módulos en desarrollo
-modules/*/temp/
-modules/*/tmp/
-modules/*/*.bak
+# Archivos específicos de módulos en desarrollo - Ser más específico
+modules/*/temp/build/
+modules/*/temp/cache/
+modules/*/tmp/build/
+modules/*/tmp/cache/
+# Permitir directorios temp/tmp que tests pueden necesitar
 
 # Archivos de configuración de módulos que pueden ser sensibles
 modules/*/config-local.php
