--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
         "phpunit/phpunit": "^9",
         "wp-phpunit/wp-phpunit": "^6.8",
         "yoast/phpunit-polyfills": "^4.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "DevTools\\Tests\\": "tests/"
+        }
     }
 }
