Add comprehensive database and performance tests for Dev-Tools architecture
- Implement DatabaseCrudTest for advanced CRUD operations on posts, users, and taxonomies, including batch operations and direct SQL queries.
- Create DatabaseSchemaTest to validate the structure, indexes, charset, and transaction support of WordPress core tables.
- Introduce PerformanceTest to benchmark module loading, database operations, caching, hooks, file operations, and memory leak detection.
- Add SimplePerformanceTest for basic performance and memory usage checks.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
             <directory>./tests/unit/</directory>
             <directory>./tests/modules/</directory>
             <directory>./tests/integration/</directory>
+            <directory>./tests/database/</directory>
         </testsuite>
     </testsuites>
     
