OK - Add environment tests for build tools and local WP setup
- Introduced BuildToolsEnvironmentTest.php to validate Node.js, NPM, and build tool configurations.
- Added LocalWPEnvironmentTest.php to check Local by WP Engine environment settings and configurations.
- Created WordPressConfigurationTest.php to ensure proper WordPress setup, including plugin availability, theme configuration, and security settings.
- Updated phpunit.xml.dist to include the new environment test directory.
- Updated .phpunit.result.cache to reflect new test results and defects.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
             <directory>./tests/modules/</directory>
             <directory>./tests/integration/</directory>
             <directory>./tests/database/</directory>
+            <directory>./tests/environment/</directory>
         </testsuite>
     </testsuites>
     
