feat: Add installation and validation scripts for Dev-Tools Arquitectura 3.0
- Implemented install.sh for automated installation of Node.js and PHP dependencies, asset compilation, and PHPUnit setup.
- Created validate.sh to verify installation success and check critical files, directories, and command availability.
- Added INSTALL.md for comprehensive installation guide with multiple installation options.
- Updated package.json with new scripts for installation and testing.
- Updated package-lock.json to include latest versions of @types/node and immutable.
- Added phpunit.xml for PHPUnit configuration and test suite setup.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,15 @@ modules/**/.phpunit.result.cache
 tests/coverage/
 tests/tmp/
 tests/output/
+
+# Installation and validation reports
+validation-report.txt
+installation-log.txt
+
+# Local development files
+*.local.js
+*.local.php
+.env.local
 test-results/
 
 # WordPress testing específico - Solo archivos temporales, NO directorios de sistema
